--- a/css/styles.css
+++ b/css/styles.css
@@ -21,17 +21,14 @@ a {
   font-family: 'Raleway', sans-serif;
   font-size: 18px;
   font-weight: 700;
-  line-height: 1.16;
-  letter-spacing: 3%;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
   text-transform: uppercase;
+  color: #4d5ae5;
 }
 
 .header-logo .studio {
   color: #2e2f42;
-}
-
-.header-logo .web {
-  color: #4d5ae5;
 }
 
 /* Navigation and Address */
@@ -40,7 +37,7 @@ a {
 .contacts-link {
   font-size: 16px;
   line-height: 1.5;
-  letter-spacing: 2%;
+  letter-spacing: 0.02em;
 }
 
 .navigation-link {
@@ -73,7 +70,7 @@ a {
   font-size: 56px;
   font-weight: 700;
   line-height: 1.07;
-  letter-spacing: 2%;
+  letter-spacing: 0.02em;
   text-align: center;
   color: #ffffff;
 }
@@ -84,7 +81,7 @@ a {
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
-  letter-spacing: 4%;
+  letter-spacing: 0.04em;
   cursor: pointer;
 }
 
@@ -99,7 +96,7 @@ a {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.1;
-  letter-spacing: 2%;
+  letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
 }
@@ -129,9 +126,10 @@ a {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
-  letter-spacing: 2%;
+  letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
+  text-transform: capitalize;
 }
 
 .team-list-item {
@@ -142,7 +140,7 @@ a {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
-  letter-spacing: 2%;
+  letter-spacing: 0.02em;
   color: #2e2f42;
   text-align: center;
 }
@@ -150,7 +148,7 @@ a {
 .team-list-item-text {
   font-size: 16px;
   line-height: 1.5;
-  letter-spacing: 2%;
+  letter-spacing: 0.02em;
   color: #434455;
   text-align: center;
 }
@@ -161,16 +159,17 @@ a {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.1;
-  letter-spacing: 2%;
+  letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
+  text-transform: capitalize;
 }
 
 .portfolio-list-item-head {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
-  letter-spacing: 2%;
+  letter-spacing: 0.02em;
   color: #2e2f42;
 }
 
@@ -187,10 +186,6 @@ a {
   background-color: #2e2f42;
 }
 
-.footer-logo .web {
-  color: #4d5ae5;
-}
-
 .footer-logo .studio {
   color: #f4f4fd;
 }
@@ -199,5 +194,5 @@ a {
   color: #f4f4fd;
   font-size: 16px;
   line-height: 1.5;
-  letter-spacing: 2%;
+  letter-spacing: 0.02em;
 }
